force-app/main/default/objects/Whatsapp_Configuration__mdt/Whatsapp_Configuration__mdt.object-meta.xml
<CustomObject>
    <label>Whatsapp Configuration</label>
    <pluralLabel>Whatsapp Configuration</pluralLabel>
</CustomObject>