force-app/main/default/objects/Whatsapp_Configuration__mdt/fields/Business_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Business_Account_ID__c</fullName>
    <label>Business Account ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>