force-app/main/default/objects/Whatsapp_Configuration__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>Phone_Number_ID__c</columns>
    <columns>Business_Account_ID__c</columns>
    <columns>Verify_Token__c</columns>
    <columns>Access_Token__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>